# Deep-Learning-Transformers

./: .gitignore  NEXT_STEPS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  setup_googlenq.py
Kostas/: .gitignore  bpe_tokenizer.json  compare_tokenizers.py  corpus.txt  corpus_small.txt  my_small_bpe_tokenizer.json  test_tokenizer.py  train_tokenizer.py
Kostas/tokenizers_list/: ByT5.py  pyproject.toml  requirements.txt
data-processing/: nq_preprocess.ipynb  nq_preprocess.py
data_filtered/: queries_filtered.jsonl
data_processing/: nq_preprocess.py
fran/: bert.py  bert_embeddings.ipynb  groq_inference.py  nq_analysis.ipynb  nq_preprocess.ipynb  pgvector_conn.ipynb  pipeline.ipynb
models/: README.md
models/LSTM/training/: .train_bpe_lstm.py.swp  __init__.py  lstm_model.py  train_bpe_lstm.py
models/Transformer/training/: __init__.py  train_bpe_transformer.py  transformer_model.py
models/training/: dataset.py  train_bpe_lstm.py
pipeline/: README.md  complete_pipeline.ipynb  complete_pipeline.py  pipeline.ipynb  run_all_embeddings.py  run_all_embeddings_csv.py
pipeline/data_preprocessing/: nq_preprocess.ipynb
pipeline/examples/: bert.py  bert_embeddings.ipynb
results/: 1500_corpus.csv  1500_corpus_out.out  3000_corpus.csv  3000_corpus_out.out  750_corpus.csv  750_corpus_out.out
setup/: .dockerignore  docker-compose.yml
tokenization/: __init__.py
tokenization/baseline/BERT/: bert_embeddings.py
tokenization/evaluation/: README.md  compare_tokenizers.py  evaluate_retrieval.py  evaluation.py  query_demo.py  tokenization_analysis.py
tokenization/our_tokenizers/: BPE.py  test_embeders.py  test_tokenizer.py  train_tokenizer.py
tokenization/our_tokenizers/BPE/: BPE_LSTM_embedding.py  BPE_embedding.py  BPE_tokenization.py  BPE_transformer_embedding.py  BPEpre.py  __init__.py
tokenization/our_tokenizers/ByT5/: ByT5_embedding.py  ByT5_tokenization.py  __init__.py
tokenization/our_tokenizers/Canine/: Canine_embedding.py  Canine_tokenization.py  __init__.py
