[project]
name = "deep-learning-transformers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "appnope>=0.1.4",
    "asttokens>=3.0.1",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "comm>=0.2.3",
    "datasets>=4.4.1",
    "debugpy>=1.8.17",
    "decorator>=5.2.1",
    "distro==1.9.0",
    "executing>=2.2.1",
    "filelock==3.20.0",
    "fsspec==2025.10.0",
    "greenlet==3.2.4",
    "groq==0.34.1",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "idna==3.11",
    "importlib-metadata>=8.7.0",
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "ipython-pygments-lexers>=1.1.1",
    "jedi>=0.19.2",
    "jinja2==3.1.6",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.9.1",
    "markupsafe==3.0.3",
    "matplotlib>=3.8.0",
    "matplotlib-inline>=0.2.1",
    "mpmath==1.3.0",
    "nest-asyncio>=1.6.0",
    "networkx==3.5",
    "numpy==1.26.4",
    "packaging>=25.0",
    "pandas>=2.1.0",
    "parso>=0.8.5",
    "pexpect>=4.9.0",
    "pgvector==0.4.1",
    "platformdirs>=4.5.0",
    "prompt-toolkit>=3.0.52",
    "psutil>=7.1.3",
    "psycopg==3.2.13",
    "psycopg-binary==3.2.13",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pygments>=2.19.2",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "pyzmq>=27.1.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "safetensors==0.7.0",
    "setuptools==80.9.0",
    "six>=1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.44",
    "sqlmodel==0.0.27",
    "stack-data>=0.6.3",
    "sympy==1.14.0",
    "tokenizers>=0.22.0",
    "tornado>=6.5.2",
    "tqdm==4.67.1",
    "traitlets>=5.14.3",
    "transformers>=4.57.0",
    "typing-extensions>=4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.5.0",
    "wcwidth>=0.2.14",
    "wheel==0.45.1",
    "zipp>=3.19.2",
]
