[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tokenizers-list"
version = "0.1.0"
description = "Custom BPE + CANINE + ByT5 tokenizer package"
readme = "README.md"
requires-python = ">=3.9"



dependencies = [
    "transformers>=4.57.0",
    "tokenizers>=0.22.0",
    "datasets>=4.4.1",
    "torch>=2.2.0",
    "matplotlib>=3.8.0",
    "pandas>=2.1.0",
    "zipp==3.19.2"
]